--- a/homepage/homepage.component.html
+++ b/homepage/homepage.component.html
@@ -41,6 +41,11 @@
   </div>
 </div>
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+  <img
+    class="animate__backInUp"
+    src="https://dg.imgix.net/can-christians-benefit-from-books-by-nonbelievers-r30biiui-en/landscape/can-christians-benefit-from-books-by-nonbelievers-r30biiui.jpg?ts=1481222504&amp;ixlib=rails-4.2.0&amp;fit=crop&amp;w=2000&amp;h=1050"
+    style="height: 8cm; width: 100%"
+  />
   <div class="w3-display-middle" style="white-space: nowrap">
     <div
       class="w3-center w3-padding-large w3-black w3-xlarge w3-wide animate__fadeInUp"
@@ -54,7 +59,7 @@
   <p class="w3-center animate__backInRight">
     <em>Different Genres of Books</em>
   </p>
-  <p>
+  <p class="animate__backInDown">
     There are different genres of books available for book readers. Every day,
     thousands of books are released in the market ranging from travel books to
     fictional books. We can pick any book of our interest to expand our
@@ -75,13 +80,10 @@
   </p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
-      <p>
-        <b
-          ><i class="fa fa-user w3-margin-right"></i>Benefits of Reading Books
-        </b>
-      </p>
+      <strong>Benefits of Reading Books</strong>
       <br />
       <img
+        class="animate__fadeInTopLeft"
         src="https://basmo.app/wp-content/uploads/2021/12/quotes-about-reading-books-1024x690.webp"
         width="500"
         height="333"
@@ -89,7 +91,7 @@
     </div>
 
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>
+      <p class="animate__fadeInTopRight">
         There are not one but various advantages of reading books. To begin
         with, it improves our knowledge on a variety of subjects. Moreover, it
         makes us wiser. When we learn different things, we learn to deal with
