--- a/admin/dashboard/dashboard.component.html
+++ b/admin/dashboard/dashboard.component.html
@@ -15,13 +15,18 @@
     class="table-wrapper-scroll-y my-custom-scrollbar"
     *ngIf="loading | async; else loadingSpinner"
   >
-    <table class="table table-striped mb-0" mat-table [dataSource]="dataSource">
+    <table
+      class="table table-striped "
+      mat-table
+      matSort
+      [dataSource]="dataSource"
+    >
       <div class="mat-elevation-z8">
         <ng-container matColumnDef="bookId">
           <th mat-header-cell *matHeaderCellDef style="width: 230px">
             Book Id
           </th>
-          <td mat-cell *matCellDef="let element" >
+          <td mat-cell *matCellDef="let element">
             {{ element.customIdName }}
           </td>
         </ng-container>
@@ -42,14 +47,14 @@
         </ng-container>
 
         <ng-container matColumnDef="startDate">
-          <th mat-header-cell *matHeaderCellDef>Start Date</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Start Date</th>
           <td mat-cell *matCellDef="let element">
             {{ consvertStartDate(element.startDate) | date }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="endDate">
-          <th mat-header-cell *matHeaderCellDef>End Date</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>End Date</th>
           <td mat-cell *matCellDef="let element">
             {{ consvertStartDate(element.endDate) | date }}
           </td>
@@ -93,5 +98,3 @@
   </button>
   <button class="noButton" mat-dialog-close mat-button>No</button>
 </ng-template>
-
-<!-- (click)="retrunBook(element)" -->
