--- a/login/login.component.scss
+++ b/login/login.component.scss
@@ -1,38 +1,33 @@
 .section {
     height: 100vh;
     display: flex;
-    justify-content: center;
     align-items: center;
-    background-color: #eee
 }
-
+.section{
+    background-image: url("https://i.pinimg.com/originals/67/18/22/671822c2f63dd5f65d8fd15c9710420b.jpg");
+}
 .section .container {
     height: 500px;
-    width: 900px;
+    width: 450px;
     background-color: #fff;
     position: relative;
-    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1)
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+    margin-left: 750px;
 }
 
-.section .container .form {
-    left: 0;
-    top: 0;
-    width: 100%;
+  .form {
     height: 100%;
-    display: flex;
-    overflow: hidden;
-    position: absolute
+    margin-left: 10px;
 }
 
-.section .container .left-side {
-    width: 45%;
+.left-side {
+    width: 100%;
     background-color: #fff;
     height: 100%;
     padding-right: 20px;
     display: flex;
-    justify-content: center;
     align-items: center;
-    position: relative
+    justify-content: space-between;
 }
 
 .section .container .left-side .brand {
@@ -135,49 +130,10 @@
     cursor: pointer;
     display: none
 }
-
-.section .container .right-side {
-    width: 60%;
-    height: 100%;
-    position: relative;
-    background-color: #000000e3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden
+.animate__bounceInRight{
+    animation-duration: 1s;
 }
 
-.right-side h2 {
-    font-size: 40px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    color: #fff;
-    z-index: 1000
-}
-
-.right-side .circle1 {
-    position: absolute;
-    height: 300px;
-    width: 300px;
-    background-color: #000;
-    border-radius: 50%;
-    top: -100px;
-    left: -100px;
-    transition: all 1s
-}
-
-
-.right-side:hover .circle1 {
-    height: 350px;
-    width: 350px
-}
-
-
-
-.section .container .right-side svg {
-    position: absolute;
-    bottom: 0
-}
 .error{
     color: red;
 }
