--- a/src/app/admin/books-list/books-list.component.html
+++ b/src/app/admin/books-list/books-list.component.html
@@ -69,7 +69,7 @@
   </div>
   <div class="scss">
     <div class="table-wrapper-scroll-y my-custom-scrollbar">
-      <table class="table table-bordered table-striped mb-0">
+      <table class="table table-bordered table-striped ">
         <thead>
           <tr class="bg-light">
             <th scope="col" width="21.1%">Time</th>
