--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,5 +1,14 @@
-<mat-form-field class="search">
-  <mat-label>Filter</mat-label>
+<div class="dropdown">
+  <button onclick="myFunction()" class="dropbtn">Date filter</button>
+  <div id="myDropdown" class="dropdown-content">
+    <a (click)="getAll()">All Reservation</a>
+    <a (click)="getReserved()">Reserve Books</a>
+    <a (click)="getOverdue()">Overdue Books</a>
+  </div>
+</div>
+
+<mat-form-field style="display: flex; padding-left: 420px">
+  <mat-label style="margin-left: 35px">Search by Name</mat-label>
   <form [formGroup]="form">
     <input
       matInput
@@ -15,12 +24,7 @@
     class="table-wrapper-scroll-y my-custom-scrollbar"
     *ngIf="loading | async; else loadingSpinner"
   >
-    <table
-      class="table table-striped "
-      mat-table
-      matSort
-      [dataSource]="dataSource"
-    >
+    <table class="table table-striped" mat-table [dataSource]="dataSource">
       <div class="mat-elevation-z8">
         <ng-container matColumnDef="bookId">
           <th mat-header-cell *matHeaderCellDef style="width: 230px">
@@ -47,14 +51,14 @@
         </ng-container>
 
         <ng-container matColumnDef="startDate">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Start Date</th>
+          <th mat-header-cell *matHeaderCellDef>Start Date</th>
           <td mat-cell *matCellDef="let element">
             {{ consvertStartDate(element.startDate) | date }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="endDate">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>End Date</th>
+          <th mat-header-cell *matHeaderCellDef>End Date</th>
           <td mat-cell *matCellDef="let element">
             {{ consvertStartDate(element.endDate) | date }}
           </td>
