--- a/admin/admin.component.html
+++ b/admin/admin.component.html
@@ -71,7 +71,7 @@
       (click)="this.router.navigate(['admin/books-preview'])"
     >
       <i class="fa fa-calendar-check-o fa-fw w3-margin-right"> </i>
-      Check rezerved books!
+      Check free books!
     </button>
     <button
       class="w3-button w3-block w3-theme-l1 w3-left-align"
@@ -95,7 +95,9 @@
   </mat-drawer-content>
 </mat-drawer-container>
 
-<div class="w3-bar w3-theme-d2" style="position: fixed">
+<div
+  class="w3-bar w3-theme-d2"
+>
   <a class="w3-bar-item w3-padding-large w3-theme-d2" style="margin-left: 17cm"
     >Admin Pannel</a
   >
