--- a/src/app/booktable/booktable.component.html
+++ b/src/app/booktable/booktable.component.html
@@ -14,14 +14,16 @@
         Free Books</button
       ><button
         mat-raised-button
-        style="color: red; margin-left: 1cm"
+        color="accent"
+        style="color: rgb(255, 255, 255); margin-left: 1cm"
         (click)="getReserved()"
       >
         Reserved Books
       </button>
       <button
         mat-raised-button
-        style="color: red; margin-left: 1cm"
+        color="warn"
+        style="color: rgb(255, 255, 255); margin-left: 1cm"
         (click)="getOverdue()"
       >
         Overdue Books
