--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -24,7 +24,12 @@
     class="table-wrapper-scroll-y my-custom-scrollbar"
     *ngIf="loading | async; else loadingSpinner"
   >
-    <table class="table table-striped" mat-table [dataSource]="dataSource">
+    <table
+      class="table table-striped"
+      mat-table
+      [dataSource]="dataSource"
+      matSort
+    >
       <div class="mat-elevation-z8">
         <ng-container matColumnDef="bookId">
           <th mat-header-cell *matHeaderCellDef style="width: 230px">
@@ -58,7 +63,7 @@
         </ng-container>
 
         <ng-container matColumnDef="endDate">
-          <th mat-header-cell *matHeaderCellDef>End Date</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>End Date</th>
           <td mat-cell *matCellDef="let element">
             {{ consvertStartDate(element.endDate) | date }}
           </td>
