--- a/admin/admin.component.html
+++ b/admin/admin.component.html
@@ -85,7 +85,7 @@
     </button>
     <div
       class="w3-block w3-theme-l1"
-      style="height: 5.66cm; position: absolute"
+      style="height: 6.18cm; position: absolute"
     ></div>
 
     <br />
@@ -95,10 +95,13 @@
   </mat-drawer-content>
 </mat-drawer-container>
 
-<div
-  class="w3-bar w3-theme-d2"
->
-  <a class="w3-bar-item w3-padding-large w3-theme-d2" style="margin-left: 17cm"
-    >Admin Pannel</a
-  >
+<div class="w3-bar w3-theme-d2">
+  <div class="w3-bar w3-theme-d2">
+    <a
+      class="w3-bar-item w3-padding-large w3-theme-d2"
+      style="margin-left: 17cm"
+      >Admin Pannel</a
+    >
+    <a style="margin-left: 18.5cm"></a>
+  </div>
 </div>
